feat(team): connect team rule api
